o.c.archivereader.channelarchiver: Removed FindBugs warnings